# multifaustus

./: .gitignore  Cargo.toml  LICENSE  README.md  critique.md  justfile
.github/workflows/: ci.yaml  docs.yml
docs/: README.md  book.toml
docs/book/: 404.html  index.html  print.html  searchindex.js  toc.html  toc.js
docs/book/api/: acceptor.html  leader.html  messages.html  replica.html  types.html
docs/book/architecture/: messages.html  nodes.html  overview.html  sequence-diagram.html  state-diagram.html
docs/src/: SUMMARY.md  overview.md
docs/src/api/: acceptor.md
docs/src/architecture/: messages.md  nodes.md  overview.md  sequence-diagram.md  state-diagram.md
src/: constants.rs  lib.rs  messages.rs  types.rs
src/nodes/: acceptor.rs  clock.rs  leader.rs  mailbox.rs  mod.rs  replica.rs
src/persistence/: mod.rs
src/transport/: mod.rs  printer.rs
tests/: nodes.rs
