[package]
name = "multifaustus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.99"
bytes = { version = "1.10.1" }
h2 = { version = "0.4.12" }
prost = "0.14.1"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }
tokio-rustls = { version = "0.26.2", features = ["ring", "tls12"], default-features = false }
tonic = "0.14.2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["tracing-log", "fmt"] }

[dev-dependencies]
quickcheck = "1.0.3"
